Add carbrands to userbuyer and userleaser, also make it to show the list